lab2/lab2_interrupt/lab2_interrupt.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lab2_simple.build.log
19:39:36 **** Auto Build of configuration Debug for project lab2_simple ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/lab2_interrupt.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab2_interrupt.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lab2_simple_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/lab2_interrupt.d" -MT"src/lab2_interrupt.o" -o "src/lab2_interrupt.o" "../src/lab2_interrupt.c"
../src/lab2_interrupt.c: In function 'IntcInitFunction':
../src/lab2_interrupt.c:10:32: error: 'XPAR_FABRIC_BTNS_5BIT_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_BTNS_5BIT_IP2INTC_IRPT_INTR
                                ^
../src/lab2_interrupt.c:115:13: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
             INTC_GPIO_INTERRUPT_ID,
             ^
../src/lab2_interrupt.c:10:32: note: each undeclared identifier is reported only once for each function it appears in
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_BTNS_5BIT_IP2INTC_IRPT_INTR
                                ^
../src/lab2_interrupt.c:115:13: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
             INTC_GPIO_INTERRUPT_ID,
             ^
../src/lab2_interrupt.c: At top level:
../src/lab2_interrupt.c:17:12: warning: 'counter_value' defined but not used [-Wunused-variable]
 static int counter_value = 0;
            ^
make: *** [src/lab2_interrupt.o] Error 1

19:39:38 Build Finished (took 2s.4ms)

